--- a/src/ThingsGateway.Admin.Razor/Pages/User/GrantApiComponent.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/User/GrantApiComponent.razor
@@ -6,8 +6,8 @@
     <TreeView TItem="OpenApiPermissionTreeSelector" Items="Items" ShowCheckbox="true" ShowIcon="true" AutoCheckParent="true" AutoCheckChildren="true" OnTreeItemChecked="OnTreeItemChecked" ModelEqualityComparer="ModelEqualityComparer"></TreeView>
 
     <div class="form-footer">
-        <Button Color="Color.Secondary" Icon="fa-solid fa-xmark" Text="@DefaultLocalizer["Close"]" OnClickWithoutRender="OnClickClose" />
-        <Button Color="Color.Primary" Icon="fa-solid fa-check" Text="@DefaultLocalizer["Save"]" OnClickWithoutRender="OnClickSave" />
+        <Button IsAsync Color="Color.Secondary" Icon="fa-solid fa-xmark" Text="@DefaultLocalizer["Close"]" OnClickWithoutRender="OnClickClose" />
+        <Button IsAsync Color="Color.Primary" Icon="fa-solid fa-check" Text="@DefaultLocalizer["Save"]" OnClickWithoutRender="OnClickSave" />
     </div>
 </div>
 
