--- a/src/adapter/ThingsGateway.Plugin.OpcDa/Pages/OpcDaMaster.razor
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/Pages/OpcDaMaster.razor
@@ -11,7 +11,7 @@
 
     @if (_plc?.OpcDaProperty != null)
     {
-        <Card class="mt-2">
+        <Card>
             <BodyTemplate>
 
                 <EditorForm Model="_plc.OpcDaProperty" AutoGenerateAllItem=false RowType="RowType.Inline" ItemsPerRow="4" ShowLabelTooltip="true" ShowLabel="true">
