--- a/src/adapter/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
+++ b/src/adapter/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
@@ -89,6 +89,10 @@
             <div class="row mx-1 form-inline mt-2">
 
                 <div class="col-12 col-md-4 p-1">
+                    <Checkbox @bind-Value=ShowSubvariable DisplayText=@OpcUaPropertyLocalizer["ShowSubvariable"] />
+                </div>
+
+                <div class="col-12 col-md-4 p-1">
                     <Button IsAsync Color="Color.Primary" OnClick="ShowImport">@OpcUaPropertyLocalizer["ShowImport"]</Button>
                 </div>
             </div>
