--- a/src/adapter/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
+++ b/src/adapter/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
@@ -89,7 +89,7 @@
             <div class="row mx-1 form-inline mt-2">
 
                 <div class="col-12 col-md-4 p-1">
-                    <Checkbox @bind-Value=ShowSubvariable DisplayText=@OpcUaPropertyLocalizer["ShowSubvariable"] />
+                    <Checkbox @bind-Value=ShowSubvariable DisplayText=@OpcUaPropertyLocalizer["ShowSubvariable"] ShowLabel="true" />
                 </div>
 
                 <div class="col-12 col-md-4 p-1">
