--- a/src/adapter/ThingsGateway.Plugin.OpcDa/Pages/OpcDaImportVariable.razor
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/Pages/OpcDaImportVariable.razor
@@ -19,7 +19,7 @@
                   }) ShowSkeleton=ShowSkeleton
                   IsAccordion ClickToggleNode ModelEqualityComparer="ModelEqualityComparer" />
     </div>
-    <div class="col-12 col-md-6 p-1">
+    <div class="col-12 col-md-6 p-2" style="min-height:500px;max-height:80vh;overflow: auto;">
 
         @if (ClickItem?.Value?.Tag?.Properties != null)
         {
