--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
@@ -36,7 +36,7 @@
 
 
         <ExportButtonDropdownTemplate Context="ExportContext">
-            <Button class="dropdown-item" OnClick="() => ExcelExportAsync(ExportContext)">
+            <Button class="dropdown-item" OnClick="() => ExcelExportAsync(ExportContext)" IsDisabled=@(!AuthorizeButton("导出"))>
                 <i class="fas fa-file-export"></i>
                 <span>@DefaultLocalizer["TablesExportButtonExcelText"]</span>
             </Button>
@@ -47,11 +47,11 @@
         </ExportButtonDropdownTemplate>
         <TableToolbarTemplate>
             <TableToolbarPopConfirmButton TItem="Variable"
-                                Color=Color.Warning Text="@Localizer["Clear"]"
+                                          Color=Color.Warning Text="@Localizer["Clear"]" IsDisabled=@(!AuthorizeButton("清空"))
                                 IsAsync OnConfirm=@(async()=>{ await VariableService.ClearVariableAsync();await ToastService.Default(); await table.QueryAsync(); }) />
 
             <PopConfirmButton TItem="Variable"
-                              Color=Color.Warning Text="@Localizer["Test"]"
+                              Color=Color.Warning Text="@Localizer["Test"]" IsDisabled=@(!AuthorizeButton("测试"))
                               IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> {await VariableService.InsertTestDataAsync(TestCount);await ToastService.Default(); await InvokeAsync(table.QueryAsync);});} )>
 
                 <BodyTemplate>
