--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatus2.razor
@@ -21,7 +21,7 @@
             {
                 <Tooltip Title="@Localizer["GatewayDeviceShowDriverUI"]" Placement="Placement.Bottom">
 
-                    <Button OnClick=@(ShowDriverUI) IsDisabled=@(!AuthorizeButton("GatewayDeviceShowDriverUI")) class="mx-2" Color="Color.None" style="color: var(--bs-card-titlecolor);" Icon=@("fab fa-simplybuilt") />
+                    <Button OnClick=@(ShowDriverUI) IsDisabled=@(!AuthorizeButton("插件页面")) class="mx-2" Color="Color.None" style="color: var(--bs-card-titlecolor);" Icon=@("fab fa-simplybuilt")  />
                 </Tooltip>
 
             }
@@ -29,24 +29,23 @@
             @if (Item?.CurrentDevice.RedundantEnable == true)
             {
                 <Tooltip Title="@Localizer["DeviceRedundantThread"]" Placement="Placement.Bottom">
-
-                    <PopConfirmButton OnConfirm=@(()=>DeviceRedundantThreadAsync(Item.DeviceId)) IsDisabled=@(!AuthorizeButton("GatewayDeviceRestart")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fas fa-exchange-alt") />
+                    <PopConfirmButton OnConfirm=@(()=>DeviceRedundantThreadAsync(Item.DeviceId)) IsDisabled=@(!AuthorizeButton("切换冗余")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fas fa-exchange-alt") />
                 </Tooltip>
 
             }
             <Tooltip Title="@Localizer["GatewayDeviceLog"]" Placement="Placement.Bottom">
 
-                <Button OnClick=@(SetLogEnable) IsDisabled=@(!AuthorizeButton("GatewayDeviceLog")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(Item.ChannelThread.LogEnable?"fa fa-pause":"fa fa-play") />
+                <Button OnClick=@(SetLogEnable) IsDisabled=@(!AuthorizeButton("通道日志")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(Item.ChannelThread.LogEnable?"fa fa-pause":"fa fa-play") />
             </Tooltip>
 
             <Tooltip Title="@Localizer["GatewayDevicePause"]" Placement="Placement.Bottom">
 
-                <Button OnClick=@(()=>PasueThread(Item.DeviceId,!Item.CurrentDevice?.KeepRun)) IsDisabled=@(!AuthorizeButton("GatewayDevicePause")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(Item.CurrentDevice.KeepRun?"fa fa-pause":"fa fa-play") />
+                <Button OnClick=@(()=>PasueThread(Item.DeviceId,!Item.CurrentDevice?.KeepRun)) IsDisabled=@(!AuthorizeButton("暂停")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(Item.CurrentDevice.KeepRun?"fa fa-pause":"fa fa-play") />
             </Tooltip>
 
             <Tooltip Title="@Localizer["GatewayDeviceRestart"]" Placement="Placement.Bottom">
 
-                <PopConfirmButton OnConfirm=@(()=>RestartAsync(Item.DeviceId)) IsDisabled=@(!AuthorizeButton("GatewayDeviceRestart")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fa-solid fa-rotate") />
+                <PopConfirmButton OnConfirm=@(()=>RestartAsync(Item.DeviceId)) IsDisabled=@(!AuthorizeButton("重启")) class="mx-2" Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fa-solid fa-rotate") />
             </Tooltip>
 
 
