--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
@@ -48,11 +48,21 @@
         <TableToolbarTemplate>
             <TableToolbarPopConfirmButton TItem="Variable"
                                           Color=Color.Warning Text="@Localizer["Clear"]" IsDisabled=@(!AuthorizeButton("清空"))
-                                IsAsync OnConfirm=@(async()=>{ await VariableService.ClearVariableAsync();await ToastService.Default(); await table.QueryAsync(); }) />
+                                          IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> { await VariableService.ClearVariableAsync();
+                                          await InvokeAsync(async()=>
+                                          {
+                                          await ToastService.Default(); await table.QueryAsync();
+                                          });
+                                          });} ) />
 
             <PopConfirmButton TItem="Variable"
                               Color=Color.Warning Text="@Localizer["Test"]" IsDisabled=@(!AuthorizeButton("测试"))
-                              IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> {await VariableService.InsertTestDataAsync(TestCount);await ToastService.Default(); await InvokeAsync(table.QueryAsync);});} )>
+                              IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> {await VariableService.InsertTestDataAsync(TestCount);
+                              await InvokeAsync(async()=>
+                              {
+                              await ToastService.Default(); await table.QueryAsync();
+                              });
+                              });} )>
 
                 <BodyTemplate>
                     <BootstrapInput @bind-Value=TestCount ShowLabel="true" ShowLabelTooltip="true" />
