--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelPage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelPage.razor
@@ -33,9 +33,14 @@
         </ExportButtonDropdownTemplate>
 
         <TableToolbarTemplate>
-            <TableToolbarPopConfirmButton TItem="Channel"  IsDisabled=@(!AuthorizeButton("清空"))
+            <TableToolbarPopConfirmButton TItem="Channel" IsDisabled=@(!AuthorizeButton("清空"))
                                           Color=Color.Warning Text="@Localizer["Clear"]"
-                                          IsAsync OnConfirm=@(async()=>{ await ChannelService.ClearChannelAsync();await ToastService.Default(); await table.QueryAsync(); }) />
+                                          IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> { await ChannelService.ClearChannelAsync();
+                                          await InvokeAsync(async()=>
+                                          {
+                                          await ToastService.Default(); await table.QueryAsync();
+                                          });
+                                          });} ) />
         </TableToolbarTemplate>
 
     </AdminTable>
