fix: 多页面通知刷新

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
@@ -33,6 +33,19 @@
                 </Template>
 
             </TableColumn>
+
+            <TableColumn @bind-Field="@context.RedundantDeviceId" Align="Alignment.Center">
+                <Template Context="deviceId">
+                    @{
+                        string device = null;
+                        if (deviceId.Value.HasValue)
+                            DeviceDict.TryGetValue(deviceId.Value.Value, out device);
+                    }
+                    @device
+                </Template>
+
+            </TableColumn>
+
         </TableColumns>
         <EditTemplate Context="context">
             <DeviceEditComponent Model=context PluginType=PluginType PluginNames="PluginNames" RedundantDevicesQuery="OnRedundantDevicesQuery"></DeviceEditComponent>
